# f446_mainboard_template_hal

./: .gitignore  .install.bat  .install.sh  CMakeLists.txt  README.md  STM32F446RETx_FLASH.ld  cmake_install.cmake  f446_hal_microros.ioc  f446_template_hal.ioc
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Lib/Air/Inc/: AirSolenoid.hpp
Lib/Air/Src/: AirSolenoid.cpp
Lib/Button/Inc/: Button.hpp
Lib/Button/Src/: Button.cpp
Lib/Control/Inc/: AxisUnits.hpp  PositionPIDController.hpp  VelocityPIController.hpp
Lib/Control/Src/: PositionPIDController.cpp  VelocityPIController.cpp
Lib/DCMotor/Inc/: DCMotor.hpp
Lib/DCMotor/Src/: DCMotor.cpp
Lib/Encoder/Inc/: Encoder.hpp
Lib/Encoder/Src/: Encoder.cpp
Lib/MicroRos/Inc/: microros_app.h  microros_config.h  microros_core.h  microros_printf.h  microros_rcl_check.h  microros_transport_uart.h
Lib/MicroRos/Src/: microros_app.c  (+5 more)
Lib/RogiLinkFlex/: CMakeLists.txt
Lib/RogiLinkFlex/Inc/: Subscriber.hpp
Src/: main.cpp
build_old_pathfix/: .ninja_deps  .ninja_log  f446_hal_microros.elf  f446_hal_microros.map  f446_template_hal.elf  f446_template_hal.map
build_old_pathfix/Debug/: .ninja_deps  .ninja_log  f446_template_hal  f446_template_hal.elf  f446_template_hal.map
build_old_pathfix/MicroRosDebug/: .ninja_deps  .ninja_log  f446_template_hal  f446_template_hal.elf  f446_template_hal.hex  f446_template_hal.map
cmake/: gcc-arm-none-eabi.cmake  microros_toolchain_stm32f446.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
docs/: work_activity_log.md
scripts/: build_microros_lib.sh  microros.env.example
(+936 files in other folders)
